@@ -12,6 +12,7 @@ Release 9.3-dev
   after the password is found
 * fix to support IPv6 addresses in -M
 * fix to test all entries in -C files, not exiting after the first found
+* attempt to make disappearing targets faster to terminate on
 * added "make uninstall"
 
 
